# seroost

./: .gitignore  Cargo.toml  README.md  index.css  index.html  index.js
scss/: _config.scss  package.json  style.scss
src/: index.html  index.js  lexer.rs  main.rs  model.rs  server.rs
src/snowball/: among.rs  mod.rs  snowball_env.rs
src/snowball/algorithms/: english_stemmer.rs
